--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,63 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:design:28.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.github.gcacace:signature-pad:1.2.1'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.roomorama:caldroid:3.0.1'
+    implementation 'com.sun.mail:android-mail:1.5.5'
+    implementation 'com.sun.mail:android-activation:1.5.5'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation('org.apache.httpcomponents:httpmime:4.3.6') {
+        exclude module: 'httpclient'
+    }
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.0'
+    /* compile 'com.applandeo:material-calendar-view:1.3.2'*/
+    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.google.android.gms:play-services:11.8.0'
+    implementation 'pub.devrel:easypermissions:0.1.5'
+    implementation('com.google.api-client:google-api-client-android:1.22.0') {
+
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation 'com.greysonparrelli.permiso:permiso:0.3.0'
+    implementation('com.google.apis:google-api-services-calendar:v3-rev218-1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation 'org.greenrobot:greendao:3.2.2'
+    // add library
+    implementation 'org.apache.commons:commons-lang3:3.6'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'gun0912.ted:tedpermission:2.2.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    //noinspection GradleCompatible
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
+    implementation 'com.github.pwittchen:infinitescroll:0.0.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
+        transitive = true;
+    }
+    /*Add QR Library Here */
+    //    implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.2'
+    implementation 'com.zfdang.multiple-images-selector:multiple-images-selector:1.1.3'
+    implementation 'com.github.myinnos:AwesomeImagePicker:1.0.2'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    /* Intercom Messages*/
+    implementation 'io.intercom.android:intercom-sdk-base:5.1.0'
+    implementation 'io.intercom.android:intercom-sdk-fcm:5.1.0'
+    //    implementation 'com.google.firebase:firebase-messaging:17.3.1'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.appyvet:materialrangebar:1.4.4'
 }
