--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.2'
     implementation 'com.zfdang.multiple-images-selector:multiple-images-selector:1.1.3'
-    implementation 'com.github.myinnos:AwesomeImagePicker:1.0.2'
+    //implementation 'com.github.myinnos:AwesomeImagePicker:1.0.2'
     implementation 'com.jjoe64:graphview:4.2.2'
     /* Intercom Messages*/
     implementation 'io.intercom.android:intercom-sdk-base:5.1.0'
