--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.CropsListActivity"></activity>
+        <activity android:name=".activities.CropSoilAnalysisListActivity" />
+        <activity android:name=".activities.CropSoilAnalysisManagerActivity" />
+        <activity android:name=".activities.CropSprayingManagerActivity" />
+        <activity android:name=".activities.CropFertilizerApplicationManagerActivity" />
+        <activity android:name=".activities.CropCultivateManagerActivity" />
+        <activity android:name=".activities.CropsManagerActivity" />
+        <activity android:name=".activities.CropMachinesListActivity" />
+        <activity android:name=".activities.CropMachineManagerActivity" />
         <activity
             android:name=".activities.CropFieldsListActivity"
             android:label="@string/title_activity_crop_fields_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.CropFieldManagerActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
@@ -34,15 +43,11 @@
         <activity
             android:name=".activities.CropInventorySeedsManagerActivity"
             android:label="@string/title_activity_crop_inventory_seeds_manager"
-
             android:theme="@style/AppTheme.NoActionBar" />
-
-
         <activity
             android:name=".activities.CropInventoryListActivity"
             android:label="@string/label_inventory_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
