--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CropsListActivity"></activity>
+        <activity android:name=".activities.CropsListActivity"
+            android:label="@string/activity_crops_list">
+
+        </activity>
         <activity android:name=".activities.CropSoilAnalysisListActivity" />
         <activity android:name=".activities.CropSoilAnalysisManagerActivity" />
         <activity android:name=".activities.CropSprayingManagerActivity" />
         <activity android:name=".activities.CropFertilizerApplicationManagerActivity" />
         <activity android:name=".activities.CropCultivateManagerActivity" />
-        <activity android:name=".activities.CropsManagerActivity" />
+        <activity android:name=".activities.CropsManagerActivity"
+            android:label="@string/activity_crop_manager"/>
         <activity android:name=".activities.CropMachinesListActivity" />
         <activity android:name=".activities.CropMachineManagerActivity" />
         <activity
