--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             android:label="@string/activity_soil_analysis_list_label"/>
         <activity android:name=".activities.CropSoilAnalysisManagerActivity"
             android:label="@string/activity_soil_analysis_manager_label"/>
-        <activity android:name=".activities.CropSprayingManagerActivity" />
+        <activity android:name=".activities.CropSprayingManagerActivity"
+            android:label="@string/activity_spraying_manager_label"/>
         <activity android:name=".activities.CropFertilizerApplicationManagerActivity" />
         <activity android:name=".activities.CropCultivationManagerActivity" />
         <activity
