--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,10 @@
         <activity
             android:name=".activities.CropsManagerActivity"
             android:label="@string/activity_crop_manager" />
-        <activity android:name=".activities.CropMachinesListActivity" />
-        <activity android:name=".activities.CropMachineManagerActivity" />
+
+        <activity android:name=".activities.CropMachineManagerActivity"
+            android:label="@string/activity_crop_machine_manager"
+            />
         <activity
             android:name=".activities.CropFieldsListActivity"
             android:label="@string/title_activity_crop_fields_list"
@@ -35,6 +37,7 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activities.CropDashboardActivity"
             android:label="@string/title_activity_dashboard"
@@ -72,7 +75,15 @@
         <activity
             android:name=".activities.CropFertilizerApplicationListActivity"
             android:label="@string/title_activity_crop_fertilizer_application_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".activities.CropMachinesListActivity"
+            android:label="@string/machines_list"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+
     </application>
 
 </manifest>
