--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
             android:label="@string/activity_soil_analysis_manager_label"/>
         <activity android:name=".activities.CropSprayingManagerActivity"
             android:label="@string/activity_spraying_manager_label"/>
-        <activity android:name=".activities.CropFertilizerApplicationManagerActivity" />
+        <activity android:name=".activities.CropFertilizerApplicationManagerActivity"
+            android:label="@string/activity_fertilizer_application_manager_label"
+            />
         <activity android:name=".activities.CropCultivationManagerActivity" />
         <activity
             android:name=".activities.CropsManagerActivity"
