Completed the database for financial manager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,25 @@
         <activity
             android:name=".activities.CropsListActivity"
             android:label="@string/activity_crops_list" />
-        <activity android:name=".activities.CropSoilAnalysisListActivity"
-            android:label="@string/activity_soil_analysis_list_label"/>
-        <activity android:name=".activities.CropSoilAnalysisManagerActivity"
-            android:label="@string/activity_soil_analysis_manager_label"/>
-        <activity android:name=".activities.CropSprayingManagerActivity"
-            android:label="@string/activity_spraying_manager_label"/>
-        <activity android:name=".activities.CropFertilizerApplicationManagerActivity"
-            android:label="@string/activity_fertilizer_application_manager_label"
-            />
+        <activity
+            android:name=".activities.CropSoilAnalysisListActivity"
+            android:label="@string/activity_soil_analysis_list_label" />
+        <activity
+            android:name=".activities.CropSoilAnalysisManagerActivity"
+            android:label="@string/activity_soil_analysis_manager_label" />
+        <activity
+            android:name=".activities.CropSprayingManagerActivity"
+            android:label="@string/activity_spraying_manager_label" />
+        <activity
+            android:name=".activities.CropFertilizerApplicationManagerActivity"
+            android:label="@string/activity_fertilizer_application_manager_label" />
         <activity android:name=".activities.CropCultivationManagerActivity" />
         <activity
             android:name=".activities.CropsManagerActivity"
             android:label="@string/activity_crop_manager" />
-
-        <activity android:name=".activities.CropMachineManagerActivity"
-            android:label="@string/activity_crop_machine_manager"
-            />
+        <activity
+            android:name=".activities.CropMachineManagerActivity"
+            android:label="@string/activity_crop_machine_manager" />
         <activity
             android:name=".activities.CropFieldsListActivity"
             android:label="@string/title_activity_crop_fields_list"
@@ -42,7 +44,6 @@
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activities.CropDashboardActivity"
             android:label="@string/title_activity_dashboard"
@@ -80,15 +81,15 @@
         <activity
             android:name=".activities.CropFertilizerApplicationListActivity"
             android:label="@string/title_activity_crop_fertilizer_application_list"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.CropMachinesListActivity"
             android:label="@string/machines_list"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activities.CropEstimateManager"
+            android:label="@string/title_activity_crop_estimate_manager"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
