--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@
             android:label="@string/machines_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
-            android:name=".activities.CropEstimateManager"
+            android:name=".activities.CropEstimateManagerActivity"
             android:label="@string/title_activity_crop_estimate_manager"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
