Added customer,employee and product cards

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.CropEmployeesListActivity"></activity>
         <activity android:name=".activities.CropProductManagerActivity" />
         <activity android:name=".activities.CropCustomerManagerActivity" />
         <activity android:name=".activities.CropEmployeeManagerActivity" />
@@ -97,7 +98,7 @@
         <activity
             android:name=".activities.CropCustomersListActivity"
             android:label="@string/title_activity_crop_customers_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
