--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CropEmployeesListActivity"></activity>
+        <activity android:name=".activities.CropEmployeesListActivity" />
         <activity android:name=".activities.CropProductManagerActivity" />
         <activity
             android:name=".activities.CropCustomerManagerActivity"
@@ -101,7 +101,6 @@
             android:name=".activities.CropCustomersListActivity"
             android:label="@string/title_activity_crop_customers_list"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activities.CropProductsListActivity"
             android:label="@string/title_activity_crop_products_list"
@@ -117,8 +116,16 @@
         <activity
             android:name=".activities.CropEstimatesListActivity"
             android:label="@string/title_activity_crop_estimates_list"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropInvoiceManagerActivity"
+            android:label="@string/title_activity_crop_invoice_manager"
+            android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity
+            android:name=".activities.CropInvoicesListActivity"
+            android:label="@string/title_activity_crop_invoices_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
