--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.CropEmployeesListActivity" />
-        <activity android:name=".activities.CropProductManagerActivity" />
+        <activity android:name=".activities.CropProductManagerActivity"
+            android:label="@string/title_product_manager_activity"/>
         <activity
             android:name=".activities.CropCustomerManagerActivity"
             android:label="@string/activity_crop_customer_manager_title" />
@@ -112,7 +113,7 @@
         <activity
             android:name=".activities.CropSupplierManagerActivity"
             android:label="@string/title_activity_crop_supplier_manager"
-            android:theme="@style/AppTheme.NoActionBar" />
+            />
         <activity
             android:name=".activities.CropEstimatesListActivity"
             android:label="@string/title_activity_crop_estimates_list"
