--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.myfarmnow.myfarmcrop">
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -12,11 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".activities.CropTasksListActivity"
-            android:label="Tasks"/>
-        <activity android:name=".activities.CropTaskManagerActivity"
-            android:label="Task Manager"/>
+        <activity
+            android:name=".activities.CropTasksListActivity"
+            android:label="Tasks" />
+        <activity
+            android:name=".activities.CropTaskManagerActivity"
+            android:label="Task Manager" />
         <activity
             android:name=".activities.CropIncomeExpensesListActivity"
             android:label="Income / Expenses " />
@@ -31,14 +33,15 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
 
         <activity
             android:name=".activities.CropEmployeesListActivity"
             android:label="Employees List" />
-        <activity android:name=".activities.CropProductManagerActivity"
-            android:label="@string/product_manager"/>
+        <activity
+            android:name=".activities.CropProductManagerActivity"
+            android:label="@string/product_manager" />
         <activity
             android:name=".activities.CropCustomerManagerActivity"
             android:label="@string/activity_crop_customer_manager_title" />
@@ -87,13 +90,7 @@
         <activity
             android:name=".activities.CropDashboardActivity"
             android:label="@string/title_activity_dashboard"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".activities.CropInventorySeedsManagerActivity"
             android:label="@string/title_activity_crop_inventory_seeds_manager"
@@ -153,7 +150,6 @@
             android:name=".activities.CropInvoicesListActivity"
             android:label="@string/title_activity_crop_invoices_list"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activities.CropPaymentManagerActivity"
             android:label="@string/title_activity_crop_payment_manager"
@@ -169,7 +165,7 @@
         <activity
             android:name=".activities.CropEstimatePreviewActivity"
             android:label="@string/title_activity_crop_estimate_preview"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.CropSalesOrdersListActivity"
             android:label="@string/title_activity_crop_sales_order_list"
@@ -177,12 +173,27 @@
         <activity
             android:name=".activities.CropSalesOrderManagerActivity"
             android:label="@string/title_activity_crop_sales_order_manager"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.CropSalesOrderPreviewActivity"
             android:label="@string/title_activity_crop_sales_order_preview"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropLoginActivity"
+            android:label="@string/title_activity_dashboard">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.CropRegisterActivity"
+            android:label="Register" />
+        <activity
+            android:name=".activities.CropVerifyPhoneNumberActivity"
+            android:label="@string/title_activity_crop_verify_phone_number"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
