--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CropPurchaseOrderPreviewActivity"></activity>
-        <activity android:name=".activities.CropPurchaseOrdersListActivity"></activity>
+        <activity android:name=".activities.CropBillManagerActivity"></activity>
+        <activity android:name=".activities.CropPurchaseOrderPreviewActivity" />
+        <activity android:name=".activities.CropPurchaseOrdersListActivity" />
         <activity android:name=".activities.CropPurchaseOrderManagerActivity" />
         <activity
             android:name=".activities.CropTasksListActivity"
