--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CropTransplantingListActivity"
-            android:label="Transplanting"/>
-        <activity android:name=".activities.CropIrrigationListActivity"
-            android:label="Irrigation"/>
-        <activity android:name=".activities.CropTransplantingManagerActivity"
-            android:label="Transplanting Manager"/>
-        <activity android:name=".activities.CropIrrigationManagerActivity"
-            android:label="Irrigation Manager"/>
+        <activity android:name=".activities.CropHarvestListActivity"
+            android:label="Harvests"/>
+        <activity android:name=".activities.CropHarvestManagerActivity"
+            android:label="Harvest Manager"/>
+        <activity
+            android:name=".activities.CropScoutingListActivity"
+            android:label="Scouting Records" />
+        <activity
+            android:name=".activities.CropScoutingManagerActivity"
+            android:label="Scouting Manager" />
+        <activity
+            android:name=".activities.CropTransplantingListActivity"
+            android:label="Transplanting" />
+        <activity
+            android:name=".activities.CropIrrigationListActivity"
+            android:label="Irrigation" />
+        <activity
+            android:name=".activities.CropTransplantingManagerActivity"
+            android:label="Transplanting Manager" />
+        <activity
+            android:name=".activities.CropIrrigationManagerActivity"
+            android:label="Irrigation Manager" />
         <activity
             android:name=".activities.CropPaymentBillsListActivity"
             android:label="Payments" />
