--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,8 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.myfarmnow.myfarmcrop"
-
-        minSdkVersion 18
+        minSdkVersion 19
         targetSdkVersion 27
-
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,6 +18,7 @@ android {
         }
     }
     buildToolsVersion '27.0.3'
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
@@ -37,14 +36,15 @@ dependencies {
     implementation 'com.roomorama:caldroid:3.0.1'
     implementation 'com.sun.mail:android-mail:1.5.5'
     implementation 'com.sun.mail:android-activation:1.5.5'
+
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation 'com.android.support:multidex:1.0.2'
+    // implementation 'com.android.support:multidex:1.0.2'
     implementation 'com.highsoft.highcharts:highcharts:7.0.1'
     implementation('org.apache.httpcomponents:httpmime:4.3.6') {
         exclude module: 'httpclient'
     }
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.0'
-    /* compile 'com.applandeo:material-calendar-view:1.3.2'*/
+    implementation 'com.github.barteksc:android-pdf-viewer:2.0.3'
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.google.android.gms:play-services:11.8.0'
     implementation 'pub.devrel:easypermissions:0.1.5'
