--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CropPaymentBillsListActivity"
+        <activity
+            android:name=".activities.CropPaymentBillsListActivity"
             android:label="Payments" />
         <activity
             android:name=".activities.CropBillsListActivity"
@@ -227,7 +228,6 @@
             android:name=".activities.CropROIStep1Activity"
             android:label="@string/title_activity_crop_roistep1"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activities.CropROIStep2Activity"
             android:label="@string/title_activity_crop_roistep2"
@@ -259,8 +259,47 @@
         <activity
             android:name=".activities.CropCalculatorsActivity"
             android:label="@string/title_activity_crop_calculators"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropNutrientsCalculatorEntryActivity"
+            android:label="@string/title_activity_crop_nutrients_calculator_entry"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropNutrientsCalculatorResults"
+            android:label="@string/title_activity_crop_nutrients_calculator_results"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropPDFViewActivity"
+            android:label="@string/title_activity_crop_pdfview"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropBestPracticesDashboardActivity"
+            android:label="@string/title_activity_crop_best_practices_dashboard"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropMachineTaskManagerActivity"
+            android:label="@string/title_activity_crop_machine_task_manager"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropMachineNotesManagerActivity"
+            android:label="@string/title_activity_crop_notes_manager"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropMachineServiceManagerActivity"
+            android:label="@string/title_activity_crop_machine_service_manager"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropMachineNotesListActivity"
+            android:label="@string/title_activity_crop_machine_notes_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropMachineTasksListActivity"
+            android:label="@string/title_activity_crop_machine_tasks_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropActivitiesListActivity"
+            android:label="@string/title_activity_crop_activities_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-
     </application>
 
 </manifest>
