--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".activities.CropHarvestListActivity"
-            android:label="Harvests"/>
-        <activity android:name=".activities.CropHarvestManagerActivity"
-            android:label="Harvest Manager"/>
-
-        <activity android:name=".activities.CropContactsListActivity"
-            android:label="Contacts"/>
-        <activity android:name=".activities.CropContactManagerActivity"
-            android:label="Contact Manager"/>
-
-
-
+        <activity
+            android:name=".activities.CropHarvestListActivity"
+            android:label="Harvests" />
+        <activity
+            android:name=".activities.CropHarvestManagerActivity"
+            android:label="Harvest Manager" />
+        <activity
+            android:name=".activities.CropContactsListActivity"
+            android:label="Contacts" />
+        <activity
+            android:name=".activities.CropContactManagerActivity"
+            android:label="Contact Manager" />
         <activity
             android:name=".activities.CropScoutingListActivity"
             android:label="Scouting Records" />
@@ -292,7 +290,6 @@
             android:name=".activities.CropCalculatorsActivity"
             android:label="@string/title_activity_crop_calculators"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activities.CropNutrientsCalculatorEntryActivity"
             android:label="@string/title_activity_crop_nutrients_calculator_entry"
@@ -332,8 +329,11 @@
         <activity
             android:name=".activities.CropActivitiesListActivity"
             android:label="@string/title_activity_crop_activities_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activities.CropMachineServicesListActivity"
+            android:label="@string/title_activity_crop_machine_services_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-
     </application>
 
 </manifest>
